--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
                 <div class="signup">
                     <input type="submit" value="signUp"><br>
                 </div>
-                
-                <div class="log">
-                    <p>Already have an account? Then</p>
-                    <input type="submit" value="Login" id="logright">
-                </div>
             </form>
+            <div class="log">
+                <p>Already have an account? Then</p>
+                <button id="logright">Login</button>
+            </div>
         </div>
     
         <!-- Sign In -->
